@@ -21,10 +21,9 @@
 ;;; This file contains the BBDB interface to Mail Composition Packages.
 ;;; See the BBDB info manual for documentation.
 
-(eval-and-compile
-  (require 'bbdb)
-  (require 'message)
-  (require 'sendmail))
+(require 'bbdb)
+(require 'message)
+(require 'sendmail)
 
 (defcustom bbdb/message-update-records-p 'bbdb-select-message
   "How `bbdb-mua-update-records' processes mail addresses in outgoing messages.
